--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "chalk": "^4.1.2",
     "denque": "^2.0.1",
     "fastify": "^4.3.0",
-    "kcp-ts": "git+https://github.com/boba-ps/kcp-ts.git"
+    "fastify-https-redirect": "^1.0.4",
+    "install": "^0.13.0",
+    "kcp-ts": "git+https://github.com/boba-ps/kcp-ts.git",
+    "npm": "^8.15.1"
   }
 }
