--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^18.0.0",
     "nodemon": "^2.0.16",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.3"
   },
   "dependencies": {
